Drop evicted content viewers from their SHEntry before calling Destroy, so that state-saving can locate the PresShell.  Bug 321778, r=bzbarsky.